6-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1   # single pod
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:latest
        ports:
        - containerPort: 8096
        resources:
          requests:
            cpu: "500m"     # ask for 0.5 CPU
            memory: "2Gi"   # ask for 2 GiB RAM
          limits:
            cpu: "1000m"    # max 1 CPU
            memory: "4Gi"   # max 4 GiB RAM
        volumeMounts:
        # Jellyfin configuration files
        - name: jellyfin-storage
          mountPath: /config
          subPath: config

        # Jellyfin media files
        - name: jellyfin-storage
          mountPath: /media
          subPath: media
      volumes:
      - name: jellyfin-storage
        persistentVolumeClaim:
          claimName: jellyfin-nfs-pvc
