4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: jellyfin-ui
      port: 8096
      targetPort: 8096
      protocol: TCP
